# django_security_monitor

./: .gitignore  LICENSE  MANIFEST.in  README.md  admin.py  apps.py  conf.py  decorators.py  middleware.py  models.py  pyproject.toml  signals.py  tasks.py  urls.py  views.py
.github/workflows/: publish.yml
migrations/: 0001_initial.py
templates/django_security_monitor/: base.html  dashboard.html  events.html  ip_detail.html  threats.html  visitors.html
